Update HmmDemoC2CTest.java
Replaced List.of function with Arrays.asList function