@@ -24,7 +24,7 @@ public class HmmDemoC2CTest {
 		Model<Outcome, Quadrant> model = HmmDemoC2C.INSTANCE.model;
 		List<Quadrant> symptoms1 = Arrays.asList(HD2Q, HD4Q, HD8Q, HD4Q);
 		List<Outcome> medicalStateSequenceList = new MostProbableStateSequenceFinder<>(model).basedOn(symptoms1);
-		assertEquals(List.of(SUCCESS, FAILURE, FAILURE, FAILURE), medicalStateSequenceList);
+		assertEquals(Arrays.asList(SUCCESS, FAILURE, FAILURE, FAILURE), medicalStateSequenceList);
 		System.out.println(model.transitionProbabilitiesFor(HD2Q, HD4Q));
 	}
 
@@ -33,7 +33,7 @@ public class HmmDemoC2CTest {
 		Model<Outcome, Quadrant> model = HmmDemoC2C.INSTANCE.model;
 		List<Quadrant> symptoms = Arrays.asList(HD4Q, HD2Q, HD8Q, HD2Q);
 		List<Outcome> medicalStateSequenceList = new MostProbableStateSequenceFinder<>(model).basedOn(symptoms);
-		assertEquals(List.of(FAILURE, SUCCESS, SUCCESS, SUCCESS), medicalStateSequenceList);
+		assertEquals(Arrays.asList(FAILURE, SUCCESS, SUCCESS, SUCCESS), medicalStateSequenceList);
 	}
 
 }
